--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "miniserde"
+name = "knocknoc"
 version = "0.1.13"
 authors = ["David Tolnay <dtolnay@gmail.com>"]
 license = "MIT OR Apache-2.0"
 description = "Data structure serialization library with several opposite design goals from Serde."
-repository = "https://github.com/dtolnay/miniserde"
-documentation = "https://docs.rs/miniserde"
+repository = "https://github.com/dtolnay/knocknoc"
+documentation = "https://docs.rs/knocknoc"
 readme = "README.md"
 edition = "2018"
 
