--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mini-internal"
+name = "knocknoc_internal"
 version = "0.1.13"
 authors = ["David Tolnay <dtolnay@gmail.com>"]
 license = "MIT OR Apache-2.0"
