--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2018"
 itoa = "0.4.3"
 knocknoc_internal = { version = "=0.1.13", path = "derive" }
 ryu = "1.0"
-base64 = "0.12"
+hex = "0.4.2"
 
 [dev-dependencies]
 automod = "0.1"
