--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ itoa = "0.4.3"
 knocknoc_internal = { version = "=0.1.13", path = "derive" }
 ryu = "1.0"
 hex = "0.4.2"
+simd-json = { version = "0.3.14", default-features = false, features = ["swar-number-parsing"], optional = true }
 
 [dev-dependencies]
 automod = "0.1"
@@ -26,3 +27,7 @@ members = ["derive"]
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+
+[features]
+default = []
+simd = []
