--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,13 @@ simd-json = { version = "0.3.14", default-features = false, features = ["swar-nu
 paste = "1.0.0"
 
 [dev-dependencies]
+criterion = "0.3"
+core_affinity = "0.5.10"
 automod = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+simd-json = "0.3.14"
 bson = "1.0.0"
 
 [workspace]
@@ -33,3 +36,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 [features]
 default = ["simd"]
 simd = ["simd-json"]
+
+
+[[bench]]
+name = "bench"
+harness = false
