--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,18 +9,18 @@ documentation = "https://docs.rs/knocknoc"
 readme = "README.md"
 edition = "2018"
 
-# [profile.release]
-# debug = true
-# lto = false
+[profile.release]
+debug = true
+lto = false
 
 [dependencies]
 itoa = "0.4.3"
 knocknoc_internal = { version = "=0.1.13", path = "derive" }
 ryu = "1.0"
-bintext = { path = "../bintext" }
+bintext = "0.1.3"
 simd-json = { version = "0.3.14", default-features = false, features = ["swar-number-parsing"], optional = true }
 paste = "1.0.0"
-faster-utf8-validator = { path = "../faster-utf8-validator-rs" }
+faster-utf8-validator = { git = "https://github.com/simd-lite/faster-utf8-validator-rs", branch = "main" }
 #anyhow = "1.0"
 
 [dev-dependencies]
