--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [features]
 default = ["simd"]
-simd = ["simd-json"]
+simd = ["simd-json"] # SIMD deserialization
+any-context = [] # Context will be std::any::Any
 
 
 [[bench]]
