--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "knocknoc"
 version = "0.1.13"
-authors = ["David Tolnay <dtolnay@gmail.com>", "Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
+authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
 license = "MIT OR Apache-2.0"
 description = "Data structure serialization library with several opposite design goals from Serde."
 repository = "https://github.com/dtolnay/knocknoc"
@@ -21,7 +21,7 @@ bintext = "0.1.3"
 simd-json = { version = "0.3.14", default-features = false, features = ["swar-number-parsing"], optional = true }
 paste = "1.0.0"
 faster-utf8-validator = { git = "https://github.com/simd-lite/faster-utf8-validator-rs", branch = "main" }
-#anyhow = "1.0"
+anyhow = { version = "1.0", optional = true }
 
 [dev-dependencies]
 criterion = "0.3"
@@ -44,6 +44,7 @@ default = ["simd"]
 simd = ["simd-json"] # SIMD deserialization
 any-context = [] # Context will be std::any::Any
 deeply-nested = [] # Manipulates the stack to (de)serialize deeply nested structs
+error = ["anyhow"] # Useful errors when debuging
 
 [[bench]]
 name = "bench"
