--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -15,6 +15,7 @@ proc-macro = true
 proc-macro2 = "1.0"
 quote = "1.0.2"
 syn = "1.0"
+darling = "0.10.2"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
